# franka_panda_description

./: CMakeLists.txt  Dockerfile  build-interactive.sh  package.xml  run.sh  setup.sh
config/: cam.rviz  franka.rviz  qolo.rviz
launch/: cam.launch.py  qolo.launch.py  visualize.launch.py
meshes/collision/: l515_adapter.stl
robots/: hand.urdf.xacro  hand.xacro  l515_adapter.xacro  panda.gazebo.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro  panda_arm_hand_cam.urdf.xacro  qolo.urdf.xacro
ros2_control/: hand.ros2_control.xacro  panda_arm.ros2_control.xacro
