<?xml version="1.0"?>
<package format="3">
  <name>franka_panda_description</name>
  <version>0.0.1</version>
  <description>
    Description of Panda Robot from Franka Emika.
    This package contains the URDF and meshes describing the Panda Arm.
  </description>

  <maintainer email="dominic.reber@epfl.ch">Dominic Reber</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
